kubernetes/test-orchestrator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-deployment
  labels:
    app: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: test-orchestrator
          image: nginx:1.14.2
          ports:
            - containerPort: 8000
