kubernetes/test-pod-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-initcontainer
  labels:
    app: myapp
spec:
  containers:
  - name: main-container
    image: gcr.io/google-containers/busybox:latest
    command: ['sh', '-c', 'ls /mnt && echo Inside the 1-container! && sleep 36000']
    volumeMounts:
    - mountPath: /mnt
      name: cache-volume   
  - name: second-container
    image: gcr.io/google-containers/busybox:latest
    command: ['sh', '-c', 'ls /mnt && echo Inside the 2-container! && sleep 36000']
  volumes:
  - name: cache-volume
    emptyDir: {}
