kubernetes/web-example-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-example-svc
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
